<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="151dp"
                android:layout_height="122dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/_436664"
                tools:layout_editor_absoluteX="-52dp"
                tools:layout_editor_absoluteY="352dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewHasil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />

                <TextView
                    android:id="@+id/textViewUmur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />

                <TextView
                    android:id="@+id/textViewKategori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewKU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategori_usia"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="246dp"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textViewTinggi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tinggi_badan_cm"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="103dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textViewBB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berat_badan"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textViewTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lahir_yyyy_mm_dd"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/masukkan_tanggal_lahir_yyyy_mm_dd"
            android:inputType="date"
            android:textColorHint="#546E7A"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>